platform/Flutter/sweetline/lib/sweetline_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

const _sweetlineAssetId = 'package:sweetline/lib/sweetline.dart';

/// Create a managed document (Document)
/// @param uri Document URI
/// @param text Document content
/// @return Managed document handle
@ffi.Native<
  sl_document_handle_t Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
>(assetId: _sweetlineAssetId)
external sl_document_handle_t sl_create_document(
  ffi.Pointer<ffi.Char> uri,
  ffi.Pointer<ffi.Char> text,
);

/// Destroy a managed document
/// @param document_handle Managed document handle
/// @return Error code, see @see {sl_error_t}. Returns @see {SL_OK} on success
@ffi.Native<ffi.Int Function(sl_document_handle_t)>(assetId: _sweetlineAssetId, symbol: 'sl_free_document')
external int _sl_free_document(sl_document_handle_t document_handle);

sl_error sl_free_document(sl_document_handle_t document_handle) =>
    sl_error.fromValue(_sl_free_document(document_handle));

/// Create a SweetLine highlight engine
/// @param show_index Whether the analysis result includes character index, if not only line and column are returned
/// @param inline_style Whether the analysis result uses inline styles instead of only returning style IDs
/// @return Highlight engine handle
@ffi.Native<sl_engine_handle_t Function(ffi.Bool, ffi.Bool)>(assetId: _sweetlineAssetId)
external sl_engine_handle_t sl_create_engine(
  bool show_index,
  bool inline_style,
);

/// Destroy the highlight engine
/// @param engine_handle Highlight engine handle
/// @return Error code, returns @see {SL_OK} on success
@ffi.Native<ffi.Int Function(sl_engine_handle_t)>(assetId: _sweetlineAssetId, symbol: 'sl_free_engine')
external int _sl_free_engine(sl_engine_handle_t engine_handle);

sl_error sl_free_engine(sl_engine_handle_t engine_handle) =>
    sl_error.fromValue(_sl_free_engine(engine_handle));

/// Define a macro for controlling #ifdef conditional compilation in importSyntax
/// @param engine_handle Highlight engine handle
/// @param macro_name Macro name
/// @return Error code, returns @see {SL_OK} on success
@ffi.Native<ffi.Int Function(sl_engine_handle_t, ffi.Pointer<ffi.Char>)>(assetId: _sweetlineAssetId,
  symbol: 'sl_engine_define_macro',
)
external int _sl_engine_define_macro(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> macro_name,
);

sl_error sl_engine_define_macro(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> macro_name,
) => sl_error.fromValue(_sl_engine_define_macro(engine_handle, macro_name));

/// Undefine a macro
/// @param engine_handle Highlight engine handle
/// @param macro_name Macro name
/// @return Error code, returns @see {SL_OK} on success
@ffi.Native<ffi.Int Function(sl_engine_handle_t, ffi.Pointer<ffi.Char>)>(assetId: _sweetlineAssetId,
  symbol: 'sl_engine_undefine_macro',
)
external int _sl_engine_undefine_macro(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> macro_name,
);

sl_error sl_engine_undefine_macro(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> macro_name,
) => sl_error.fromValue(_sl_engine_undefine_macro(engine_handle, macro_name));

/// Compile syntax rules (directly from JSON content)
/// @param engine_handle Highlight engine handle
/// @param syntax_json Syntax rule JSON configuration
/// @return Syntax rule error information (if any)
@ffi.Native<
  sl_syntax_error_t Function(sl_engine_handle_t, ffi.Pointer<ffi.Char>)
>(assetId: _sweetlineAssetId)
external sl_syntax_error_t sl_engine_compile_json(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> syntax_json,
);

/// Compile syntax rules (from a JSON configuration file)
/// @param engine_handle Highlight engine handle
/// @param syntax_file Path to the syntax rule JSON file
/// @return Syntax rule error information (if any)
@ffi.Native<
  sl_syntax_error_t Function(sl_engine_handle_t, ffi.Pointer<ffi.Char>)
>(assetId: _sweetlineAssetId)
external sl_syntax_error_t sl_engine_compile_file(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> syntax_file,
);

/// Register a style name mapping from style name to ID
/// @param engine_handle Highlight engine handle
/// @param style_name Highlight style name
/// @param style_id Highlight style ID
/// @return Error code, returns @see {SL_OK} on success
@ffi.Native<
  ffi.Int Function(sl_engine_handle_t, ffi.Pointer<ffi.Char>, ffi.Int32)
>(assetId: _sweetlineAssetId, symbol: 'sl_engine_register_style_name')
external int _sl_engine_register_style_name(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> style_name,
  int style_id,
);

sl_error sl_engine_register_style_name(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> style_name,
  int style_id,
) => sl_error.fromValue(
  _sl_engine_register_style_name(engine_handle, style_name, style_id),
);

/// Get style name by style ID
/// @param engine_handle Highlight engine handle
/// @param style_id Highlight style ID
/// @return The registered style name for the given ID in the engine
@ffi.Native<ffi.Pointer<ffi.Char> Function(sl_engine_handle_t, ffi.Int32)>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Char> sl_engine_get_style_name(
  sl_engine_handle_t engine_handle,
  int style_id,
);

/// Create a plain text highlight analyzer by syntax rule name (no incremental analysis support)
/// @param engine_handle Highlight engine handle
/// @param syntax_name Syntax rule name
/// @return Plain text highlight analyzer handle
@ffi.Native<
  sl_analyzer_handle_t Function(sl_engine_handle_t, ffi.Pointer<ffi.Char>)
>(assetId: _sweetlineAssetId)
external sl_analyzer_handle_t sl_engine_create_text_analyzer(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> syntax_name,
);

/// Create a plain text highlight analyzer by file name (no incremental analysis support)
/// @param engine_handle Highlight engine handle
/// @param file_name File name or basename used for syntax routing
/// @return Plain text highlight analyzer handle
@ffi.Native<
  sl_analyzer_handle_t Function(sl_engine_handle_t, ffi.Pointer<ffi.Char>)
>(assetId: _sweetlineAssetId)
external sl_analyzer_handle_t sl_engine_create_text_analyzer_by_file_name(
  sl_engine_handle_t engine_handle,
  ffi.Pointer<ffi.Char> file_name,
);

/// Perform full highlight analysis on a text
/// @param analyzer_handle Plain text highlight analyzer handle
/// @param text Full text content
/// @return Analysis result, tightly packed in byte order. Structure:
/// @code
/// result[0] = span payload flags
/// bit0: hasStartIndex
/// bit1: inlineStyle
/// result[1] = span field count (stride)
/// result[2] = line count
/// Followed by line_count line entries:
/// line_entry[0] = span count of current line
/// Followed by span_count * stride fields
/// Span payload:
/// common: [column, length]
/// if show_index=true: append [startIndex]
/// if inline_style=true: append [foregroundColor, backgroundColor, fontAttributes]
/// else: append [styleId]
/// fontAttributes bitmask:
/// (bits & 1) != 0 => bold
/// (bits & (1 << 1)) != 0 => italic
/// (bits & (1 << 2)) != 0 => strikethrough
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<
  ffi.Pointer<ffi.Int32> Function(sl_analyzer_handle_t, ffi.Pointer<ffi.Char>)
>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_text_analyze(
  sl_analyzer_handle_t analyzer_handle,
  ffi.Pointer<ffi.Char> text,
);

/// Perform single line highlight analysis and return the result
/// @param analyzer_handle Plain text highlight analyzer handle
/// @param text Single line text content
/// @param line_info Metadata for the current line, must be an int32_t array of length 3:
/// @code
/// line_info[0] = current line number
/// line_info[1] = start highlight state, typically from the end_state of the previous line's result; line 0 starts at 0
/// line_info[2] = cumulative character count up to the current line, excluding line endings
/// @endcode
/// @return Analysis result, tightly packed in byte order. Structure:
/// @code
/// result[0] = span payload flags
/// bit0: hasStartIndex
/// bit1: inlineStyle
/// result[1] = number of integer fields per token span
/// result[2] = number of token spans
/// result[3] = state ID at the end of current line analysis
/// result[4] = total characters analyzed in current line (excluding line endings)
/// Followed by result[2] * result[1] integer fields (single-line span payload):
/// common: [column, length]
/// if show_index=true: append [startIndex]
/// if inline_style=true: append [foregroundColor, backgroundColor, fontAttributes]
/// else: append [styleId]
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<
  ffi.Pointer<ffi.Int32> Function(
    sl_analyzer_handle_t,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Int32>,
  )
>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_text_analyze_line(
  sl_analyzer_handle_t analyzer_handle,
  ffi.Pointer<ffi.Char> text,
  ffi.Pointer<ffi.Int32> line_info,
);

/// Perform indent guide analysis on plain text (requires prior call to sl_text_analyze for highlight results)
/// @param analyzer_handle Plain text highlight analyzer handle
/// @param text Text content
/// @return Analysis result, format same as sl_document_analyze_indent_guides
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<
  ffi.Pointer<ffi.Int32> Function(sl_analyzer_handle_t, ffi.Pointer<ffi.Char>)
>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_text_analyze_indent_guides(
  sl_analyzer_handle_t analyzer_handle,
  ffi.Pointer<ffi.Char> text,
);

/// Load a managed document and get a document highlight analyzer handle (supports incremental analysis)
/// @param engine_handle Highlight engine handle
/// @param document_handle Managed document handle
/// @return Document highlight analyzer handle
@ffi.Native<
  sl_analyzer_handle_t Function(sl_engine_handle_t, sl_document_handle_t)
>(assetId: _sweetlineAssetId)
external sl_analyzer_handle_t sl_engine_load_document(
  sl_engine_handle_t engine_handle,
  sl_document_handle_t document_handle,
);

/// Perform full highlight analysis on a managed document (typically called once after initial document load)
/// @param analyzer_handle Document highlight analyzer handle
/// @return Analysis result, tightly packed in byte order. Structure:
/// @code
/// Same format as sl_text_analyze:
/// [flags, spanStride, lineCount, lineEntry...]
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<ffi.Pointer<ffi.Int32> Function(sl_analyzer_handle_t)>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_document_analyze(
  sl_analyzer_handle_t analyzer_handle,
);

/// Perform highlight analysis on a managed document, returning only a highlight slice for the specified line range
/// @param analyzer_handle Document highlight analyzer handle
/// @param visible_range Visible line range, array structure: [startLine],[lineCount]
/// @return Highlight slice for the specified line range, tightly packed in byte order. Structure:
/// @code
/// Same format as sl_document_analyze_incremental_in_line_range:
/// [flags, spanStride, startLine, totalLineCount, lineCount, lineEntry...]
/// @endcode
/// Note: the return value must be freed by calling sl_free_buffer after use
@ffi.Native<
  ffi.Pointer<ffi.Int32> Function(sl_analyzer_handle_t, ffi.Pointer<ffi.Int32>)
>(assetId: _sweetlineAssetId)
external ffi.Pointer<ffi.Int32> sl_document_analyze_line_range(
  sl_analyzer_handle_t analyzer_handle,
  ffi.Pointer<ffi.Int32> visible_range,
);
